--- a/valohai.yaml
+++ b/valohai.yaml
@@ -3,4 +3,47 @@
 - step:
     name: run training
     image: 905675611115.dkr.ecr.eu-west-1.amazonaws.com/valohai/cuda-anaconda:cuda8.0-cudnn5-devel-conda4.2.0
-    command: 'cd /tmp/code; conda env create -q; source activate ladder; conda install -y -q libgfortran==1; echo "data_path: /root/ladder" > /root/.fuelrc; fuel-download mnist; fuel-convert mnist --dtype float32; mv mnist_float32.hdf5 mnist.hdf5; python run.py train --encoder-layers 1000-500-250-250-250-10 --decoder-spec gauss --denoising-cost-x 1000,1,0.01,0.01,0.01,0.01,0.01 --num-epochs 10 --labeled-samples 60000 --unlabeled-samples 60000 --seed 1 -- mnist_all_full'
+    command: 'cd /tmp/code; conda env create -q; source activate ladder; conda install -y -q libgfortran==1; echo "data_path: /root/ladder" > /root/.fuelrc; fuel-download mnist; fuel-convert mnist --dtype float32; mv mnist_float32.hdf5 mnist.hdf5; python run.py train {params} -- mnist_all_full'
+    params:
+
+      - name: num-epochs
+        pass-as: --num-epochs {v}
+        description: Number of training epochs, 150 if not specified
+        type: integer
+        min: 1
+        optional: true
+
+      - name: seed
+        pass-as: --seed {v}
+        type: integer
+        default: 1
+
+      - name: labeled-samples
+        pass-as: --labeled-samples {v}
+        description: How many supervised samples are used
+        type: integer
+        default: 60000
+
+      - name: unlabeled-samples
+        pass-as: --unlabeled-samples {v}
+        description: How many supervised samples are used
+        type: integer
+        default: 60000
+
+      - name: encoder-layers
+        pass-as: --encoder-layers {v}
+        description: List of layers for f
+        type: string
+        default: 1000-500-250-250-250-10
+
+      - name: denoising-cost-x
+        pass-as: --denoising-cost-x {v}
+        description: Weight of the denoising cost
+        type: string
+        default: 1000,1,0.01,0.01,0.01,0.01,0.01
+
+      - name: decoder-spec
+        pass-as: --decoder-spec {v}
+        description: List of decoding function types
+        type: string
+        default: gauss
